Fix layout_header CSS issues
Currently, the layout header component looks different in the context of
static vs in isolation.
- on the account manager, which does not use static, the layout header
navigation does not align as intended with the rest of the header on
tablet devices
- in the context of an application that uses static, the layout header
  inherits some styles from static. Additionally, application CSS will
conflict with the layout_header CSS resulting in spacing issues.

This aims to address some of these problems by removing unnecessary
classes, as well as increasing layout_header CSS specificity where this
CSS might be overruled by external styles from either static or the
parent application's stylesheet.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_layout-header.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_layout-header.scss
@@ -31,7 +31,7 @@
 }
 
 .gem-c-layout-header--search-left {
-  .gem-c-header__menu-button {
+  .gem-c-header__menu-button.govuk-header__menu-button {
     margin-top: - govuk-spacing(7);
     left: 0;
   }
@@ -80,8 +80,6 @@
 
 .gem-c-layout-header__logo,
 .gem-c-layout-header__search {
-  padding: 0;
-
   @include govuk-media-query($until: "tablet") {
     margin-bottom: govuk-spacing(3);
   }
@@ -158,4 +156,13 @@
   @include govuk-media-query($from: tablet) {
     display: block;
   }
+}
+
+.govuk-header__menu-button.gem-c-header__menu-button {
+  top: govuk-spacing(4);
+  right: 0;
+}
+
+.gem-c-header__nav {
+  clear: both;
 }
